--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ sudo: required
 services:
   - docker
 before_install: 
-  - docker build -t amanovishnu/docker-react -f Dockerfile.dev .
+  - docker build -t docker-react -f Dockerfile.dev .
 script:
-  - docker run -e CI=true amanovishnu/docker-react npm run test 
+  - docker run -e CI=true docker-react npm run test 
