info - gh actions file updated

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile.dev --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile.dev -t docker-react
+      run: docker run -e CI=true docker-react npm run test 
