--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,4 +16,5 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . --file Dockerfile.dev -t docker-react
-      run: docker run -e CI=true docker-react npm run test 
+    - name: Run Tests
+      run: docker run -e CI=true docker-react npm run test
