--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile.dev -t docker-react
     - name: Run Tests
-      run: docker run docker-react npm run test -- --coverage
+      run: docker run -e CI=true docker-react npm run test
