--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,18 @@ sudo: required
 services:
   - docker
 before_install: 
-  - docker build -t docker-react -f Dockerfile.dev .
-script:
-  - docker run -e CI=true docker-react npm run test 
-deploy:
-  provider: elasticbeanstalk
-  region: "ap-south-1"
-  app: "docker-react"
-  env: "Docker-env"
-  bucket_name: "elasticbeanstalk-ap-south-1-e4302235433"
-  bucket_path: "docker-react"
-  on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: "$AWS_SECRET_KEY"
+  - docker build -t amanovishnu/react_test -f ./client/Dockerfile.dev ./client 
+scripts:
+  - docker run -e CI=true amanovishnu/react_test npm test
+after_success: 
+  - docker build -t amanovishnu/multi-client ./client
+  - docker build -t amanovishnu/multi-nginx ./nginx
+  - docker build -t amanovishnu/multi-server ./server
+  - docker build -t amanovishnu/multi-worker ./worker
+  # Login into Docker CLI 
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Push the Images to DockerHub
+  - docker push amanovishnu/multi-client
+  - docker push amanovishnu/multi-nginx
+  - docker push amanovishnu/multi-server
+  - docker push amanovishnu/multi-worker
