--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,11 @@
-FROM node:16-alpine AS builder
+FROM node:16-alpine as builder
 WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
 RUN npm run build
 
-# /app/build contains the build code, we need to copy it to next image
-
 FROM nginx:latest
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
