--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,71 @@
 services:
-  r_app:
+
+  nginx:
+    restart: always
     build:
-      context: .
+      context: ./nginx
       dockerfile: Dockerfile.dev
-    container_name: app
+    container_name: nginx
     ports:
-      - 3000:3000
-    volumes:
-      - /app/node_modules
-      - .:/app
-  r_test:
+      - 80:80
+    depends_on:
+      - api
+      - client
+
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      - POSTGRES_PASSWORD=postgres_password
+    ports:
+      - 5432:5432
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - 6379:6379 
+
+  api:
     build:
-      context: .
+      context: ./server
       dockerfile: Dockerfile.dev
-    container_name: test
+    container_name: api
     volumes:
       - /app/node_modules
-      - .:/app
-    command: ["npm", "run", "test"] # Overrides Default Startup command
+      - ./server:/app 
+    environment:
+      - REDIS_HOST=redis # service name
+      - REDIS_PORT=6379
+      - PGUSER=postgres # default
+      - PGHOST=postgres # service name
+      - PGDATABASE=postgres # default
+      - PGPASSWORD=postgres_password # default
+      - PGPORT=5432
+    depends_on:
+      - postgres
+      - redis
+
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile.dev
+    container_name: client
+    volumes:
+      - /app/node_modules
+      - ./client:/app
+    environment:
+      - WDS_SOCKET_PORT=0
+
+  worker:
+    build:
+      context: ./worker
+      dockerfile: Dockerfile.dev
+    container_name: worker
+    volumes:
+      - /app/node_modules
+      - ./worker:/app
+    environment:
+      - REDIS_HOST=redis # service name
+      - REDIS_PORT=6379
     
