--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,6 @@
-FROM node:lts-alpine
+FROM node:14.14.0-alpine
 WORKDIR /app
 COPY package.json .
-RUN npm install 
+RUN npm install
 COPY . .
-EXPOSE 3000
 CMD ["npm", "run", "start"]
